tests/ui/stability-attribute/stability-in-private-module.rs
fn main() {
    let _ = std::sys::os::errno();
    //~^ERROR module `sys` is private
}
